k8s/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: benyz
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 5005
    targetPort: 5005
  type: ClusterIP
